# SQLtutorial

./: README.md
01_select/: 1_select_a.sql  1_select_b.sql  1_select_d.sql  1_select_e.sql  1_select_f.sql
02_where/: 2_where_a.sql  2_where_b.sql  2_where_c.sql  2_where_d.sql  2_where_e.sql
03_or_and/: 3_or_and_a.sql  3_or_and_b.sql  3_or_and_c.sql  3_or_and_d.sql
04_in/: 4_in_a.sql  4_in_b.sql  4_in_c.sql
05_between/: 5_between_a.sql  5_between_b.sql
06_like/: 6_like_a.sql  6_like_b.sql  6_like_c.sql  6_like_d.sql  6_like_e.sql
07_regexp/: 7_regexp_a.sql  7_regexp_b.sql  7_regexp_c.sql  7_regexp_d.sql  7_regexp_e.sql  7_regexp_f.sql  7_regexp_g.sql  7_regexp_h.sql
08_is_null/: 8_is_null_a.sql  8_is_null_b.sql
09_order_by/: 9_order_by_a.sql  9_order_by_b.sql  9_order_by_c.sql  9_order_by_d.sql
10_limit/: 10_limit_a.sql  10_limit_b.sql  10_limit_c.sql
11_inner_join/: 11_inner_join_a.sql  11_inner_join_b.sql  11_inner_join_c.sql
12_self_join/: 12_self_join_a.sql  12_self_join_b.sql
13_multiple_join/: 13_join_multiple_a.sql  13_join_multiple_b.sql
14_compound_joins/: 14_compound_join_a.sql
15_implicit_join/: 15_implicit_join_a.sql
16_outer_join/: 16_outer_join_a.sql  16_outer_join_b.sql
17_outer_multiple/: 17_outer_multiple_a.sql  17_outer_multiple_b.sql
18_self_outer_join/: 18_self_outer_join.sql
1_select/: 1_select_c.sql  1_select_e.sql  1_select_f.sql  1_select_g.sql
Cpp/BoostMySQL/: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp
Cpp/MariaDB/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Cpp/MariaDbCpp/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Cpp/MySqlConnector/: CMakeLists.txt  main.cpp
Cpp/MySqlConnectorCpp/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Cpp/SOCI/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Cpp/SQLite3/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
Docker/mariadb/: docker-compose.yml
Docker/mariadb_healthcheck/: docker-compose.yml
Docker/mysql/: docker-compose.yml  test.sql
Docker/mysql_healthcheck/: docker-compose.yml
Docker/mysql_wait/: docker-compose.yml  test.sql  wait_for_db.sh
